--- a/FilePersistence/FilePersistence.qrc
+++ b/FilePersistence/FilePersistence.qrc
@@ -5,5 +5,6 @@
         <file>test/persisted/units/2</file>
         <file>test/persisted/units/units</file>
         <file>test/persisted/partial/partial</file>
+        <file>test/persisted/partialResave/partialResave</file>
     </qresource>
 </RCC>
