Add an extra test and split the functionality of FragmentLayouter

--- a/Export/Export.qrc
+++ b/Export/Export.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/Export">
         <file>test/data/text/text</file>
+		  <file>test/data/text/text_modified</file>
     </qresource>
 </RCC>
